[package]
name = "apocalypse-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
layer-wasi = { git = "https://github.com/Lay3rLabs/avs-toolkit", version = "0.1.1" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
wit-bindgen-rt = { version = "0.33.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:apocalypse-oracle"
target = "lay3r:avs/task-queue@0.3.0"

[package.metadata.component.dependencies]
