[package]
name = "my-oracle-example"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
anyhow.workspace = true
layer-wasi = { git = "https://github.com/Lay3rLabs/avs-toolkit", version = "0.1.1" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.128"
wit-bindgen-rt = { version = "0.33.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:my-oracle-example"
target = "lay3r:avs/task-queue@0.3.0"

[package.metadata.component.dependencies]
